[project]
name = "ai-coding-kit"
version = "0.1.0"
description = "A cross-platform AI tool integration kit"
authors = [{"name": "zengfr", "email": "362505707@qq.com"}]
requires-python = ">=3.12"
license = {text = "Apache 2.0"}

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]

[project.scripts]
ai-coding-kit = "ai-coding-kit.__main__:main"

[tool.uv]
extras = ["dev"]